cmake : correct dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,30 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -s")
 
 add_library(machine SHARED machine.c)
 
-add_library(cycle SHARED cycle.c
-	function.c)
-target_link_libraries(cycle machine)
+add_library(function SHARED function.c)
 
-add_library(parser SHARED parser.c
-	utility.c)
-target_link_libraries(parser machine)
+add_library(cycle SHARED cycle.c)
+target_link_libraries(cycle function)
+
+add_library(utility SHARED utility.c)
+
+add_library(parser SHARED parser.c)
+target_link_libraries(parser utility)
 
 add_library(loader SHARED loader.c)
-target_link_libraries(loader machine)
 
 add_library(writer SHARED writer.c)
-target_link_libraries(writer machine)
 
 add_library(printer SHARED print.c)
-target_link_libraries(printer machine)
 
 add_executable(main main.c)
 target_link_libraries(main machine
 	cycle
 	parser
 	loader
-	writer
-	printer)
+	writer)
 set_target_properties(main PROPERTIES OUTPUT_NAME "machine")
