--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -s")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s -O3")
 
 add_library(machine SHARED machine.c)
+
+add_library(instructions SHARED instruction.c)
 
 add_library(function SHARED function.c)
 
@@ -26,5 +28,7 @@ target_link_libraries(main machine
 	cycle
 	parser
 	loader
-	writer)
+	writer
+	instructions
+	)
 set_target_properties(main PROPERTIES OUTPUT_NAME "machine")
