Embedded function definitions into the executable To make the executable portable, now definitons.parser has been embedded into the executable, so that it can be run from anywhere.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--format=binary -Wl,definition.parser -Wl,--format=default")
+
 add_executable(machine main.c
         instruction.c
         machine.c
